# Machine-Learning-Source-Code-Plagiarism

./: .gitignore  GST.py  README.md  attributes.py  classifiers.ipynb  config.py  constants.py  create_dataframe.py  dirTest.py  greedystring.py  gst.py  gui.py  log.txt  machine_learning.py  main.py  ml.py  model_creator.py  nodeutil.py  notes  pyproject.toml  quickGST.py  random_forest_model.pkl.REMOVED.git-id  reg.py  requirements.txt  results.py  test.py  util.py
.ipynb_checkpoints/: Graphing-checkpoint.ipynb  classifiers-checkpoint.ipynb
dataframes/: attribute_df_jfiles.csv  attribute_df_soco_a1.csv  jfiles_part_0.csv  soco_test_A1_24.csv.REMOVED.git-id
greedy-string-tiling/: GST.py
jfiles/: 000.java  001.java  002.java  003.java  005.java  006.java  008.java  009.java  011.java  012.java  013.java  014.java  015.java  016.java  017.java  018.java  019.java  AirlineProblem.java  BinaryConverter.java  FilterExample.java  FreqTableExampleOriginal.java  GenericList (1).java  GenericList.java  GenericListVersion2.java  IntListTesterVer1.java  IntListTesterVer2.java  IntListVer1.java  IntListVer2.java  IntListVer3.java  Life.java  LinkedList.java  MineSweeper.java  PrimeEx.java  PrimitiveParameters.java  ReadAndPrintScores.java  RecursionExampleDirectory.java  ScannerAndKeyboard.java  SimpleWordCounter.java  Stopwatch.html  Stopwatch.java  (+6 more)
jfiles2/: 004.java
judgements/: SOCO14-java.qrel:Zone.Identifier  clsoco15-training-corpus.qrel:Zone.Identifier
logs/: lizard_log.txt
materialize/: match_template.html  template.html
notebooks/: Graphing.ipynb  (+1 more)
(+74 files in other folders)
