[tool.poetry]
name = "machine-learning-source-code-plagiarism"
version = "0.1.0"
description = ""
authors = ["Bosire Nyakundi <nyakundi@hotmail.co.uk>"]
readme = "README.md"
packages = [{include = "machine_learning_source_code_plagiarism"}]

[tool.poetry.dependencies]
python = "^3.10"
six = "^1.16.0"
javalang = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
